components/support/url-macro/tests/empty_args.stderr
error: unexpected end of input, expected string literal
 --> empty_args.rs:8:13
  |
8 |     let _ = url!();
  |             ^^^^^^
  |
  = note: this error originates in the macro `url` (in Nightly builds, run with -Z macro-backtrace for more info)
